data/derived/fa15/progs/unify/prog0116.ml.out
Characters 198-224:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type 'a * 'b
